--- a/styles.css
+++ b/styles.css
@@ -408,7 +408,7 @@ h2.third-h2{
     select all of the inputs, labels, select dropdowns and text areas on the page by tag name
 */
 /* ----- */
-{
+input, label{
     display: block;
     width: 95%;
     margin: 0.5rem auto;
@@ -422,7 +422,7 @@ h2.third-h2{
     select all of the inputs and selects by tag name
 */
 /* ----- */
-{
+input{
     height: 2rem;
     border: 2px solid var(--dk-gray);
 }
@@ -432,8 +432,8 @@ h2.third-h2{
     TO DO:
     select all of the inputs on focus (by tag name/pseudo-class) on the page
 */
-/* ----- */
-{
+/* ----- is required so will be red if not filled in*/
+input:invalid{
     outline: 4px solid var(--orange);
     outline-offset: 2px;
     border: none;
@@ -444,8 +444,8 @@ h2.third-h2{
     TO DO:
     select all of the inputs on focus (by tag name/pseudo-class) on the page
 */
-/* ----- */
-{
+/* ----- turns blue when clicked inside */
+input:focus{
     outline-color: var(--dv-dk-blue);
 }
 
@@ -455,7 +455,7 @@ h2.third-h2{
     select the labels in the form using the tag name/element selector
 */
 /* ----- */
-{
+label{
     font-size: 1.25rem;
     margin-top: 16px;
 }
@@ -466,7 +466,7 @@ h2.third-h2{
     select the spans in the form using the class name selector
 */
 /* ----- */
-{
+.required{
     font-size: 1.5rem;
     font-weight: bold;
     display: inline;
@@ -479,7 +479,7 @@ h2.third-h2{
     select all of the submit buttons (by tag name/type attribute) on the page
 */
 /* ----- */
-{
+input[type="submit"]{
     display: block;
     margin: 32px auto 16px;
     width: 100%;
@@ -502,7 +502,7 @@ h2.third-h2{
     select all of the submit buttons on hover (by tag name/type attribute name) on the page
 */
 /* ----- */
-{
+input[type="submit"]:hover{
     box-shadow: var(--box-shadow-sm);
     color: var(--purple);
     background-color: var(--lt-gray);
@@ -514,7 +514,7 @@ h2.third-h2{
     select all of the submit buttons on focus (by tag name/type attribute/pseudo-class) on the page
 */
 /* ----- */
-{
+input[type="submit"]:focus{
     box-shadow: var(--box-shadow-sm);
     outline: 4px solid var(--dv-dk-blue);
     outline-offset: 1px;
@@ -529,7 +529,7 @@ h2.third-h2{
     select the h2 in the list styling section using the class name selector
 */
 /* ----- */
-{
+.blue-text{
     color: var(--blue);
 }
 
@@ -539,7 +539,7 @@ h2.third-h2{
     select the unordered list in the list styling container using the id and tag name selectors
 */
 /* ----- */
-{
+#list ul{
     display: block;
     width: fit-content;
     margin: 32px auto;
@@ -551,7 +551,7 @@ h2.third-h2{
     select all of the list items in the list styling container using the ID and tag name selectors
 */
 /* ----- */
-{
+#list li{
     font-size: 1.25rem;
     line-height: 1.35;
     margin-bottom: 8px;
@@ -564,18 +564,18 @@ h2.third-h2{
     select the bullets on the unordered list in the list styling section using the tag name and pseudo-class selectors
 */
 /* ----- */
-{
+#list li::marker{
     font-size: 3rem;
     content: "\2730";
 }
 
-/* ----- */
+/* ----- List Styling Section */
 /* 
     TO DO:
     select the first list item in the list styling container using the ID, tag name, and pseudo-class selectors
 */
 /* ----- */
-{
+#list li:first-of-type{
     color: var(--purple);
 }
 
@@ -585,7 +585,7 @@ h2.third-h2{
     select the last list item in the list styling container using the ID, tag name, and pseudo-class selectors
 */
 /* ----- */
-{
+#list li:last-of-type{
     color: var(--dv-lt-blue);
 }
 
@@ -597,20 +597,20 @@ h2.third-h2{
     TO DO:
     select all of the divs in the more styling section using the ID, descendant, and tag name selectors
 */
-/* ----- */
-{
+/* -----ID start with hashtag and space is all divs*/
+#more div{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* ----- */
+/* ----- MORE SECTION */
 /* 
     TO DO:
     select the first div in the more styling section using the ID, tag name and direct descendant selectors
   */
-  /* ----- */
-{
+  /* ----- Means will mark first decendent of div*/
+#more > div{
     width: 300px;
     height: 300px;
     background-color: var(--dv-red);
@@ -622,8 +622,8 @@ h2.third-h2{
     TO DO:
     select the second div in the more styling section using the ID, descendant, and tag name selectors
 */
-/* ----- */
-{
+/* -----div inside of div with id of more*/
+#more div div{
     width: 250px;
     height: 250px;
     background-color: var(--dv-orange);
@@ -635,7 +635,7 @@ h2.third-h2{
     select the third div in the more styling section using the ID, descendant, and class name selectors
 */
 /* ----- */
-{
+#more .third{
     width: 200px;
     height: 200px;
     background-color: var(--dv-yellow);
@@ -647,7 +647,7 @@ h2.third-h2{
     select the fourth div in the pseudo-class styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-{
+#more .third div{
     width: 150px;
     height: 150px;
     background-color: var(--dv-mint);
@@ -658,8 +658,8 @@ h2.third-h2{
     TO DO:
     select the last div in the more styling section using the ID, tag name, descendant, and class selectors
 */
-/* ----- */
-{
+/* -----Space means look inside of this thing to find this */
+#more .third div div{
     width: 100px;
     height: 100px;
     background-color: var(--dv-lt-blue);
@@ -674,7 +674,7 @@ h2.third-h2{
     select the section with the ID of software by its ID 
 */
 /* ----- */
-{
+#software{
     margin-top: 16px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -687,7 +687,12 @@ h2.third-h2{
     select the links in the software section using the ID, tag name, and child/descendant selector
 */
 /* ----- */
-{
+#software h3{
+    grid-column: 1/-1;
+    text-align: center;
+}
+
+#software a{
     width: 100px;
     height: auto;
     margin: 0 auto;
@@ -702,7 +707,7 @@ h2.third-h2{
     select the links in the software section on hover using the ID, tag name, child/descendant selector, and pseudo-class selector
 */
 /* ----- */
-{
+#software a:hover{
     background-color: var(--dk-gray);
     box-shadow: var(--box-shadow-sm);
 }
@@ -712,8 +717,8 @@ h2.third-h2{
     TO DO:
     select the SVGs in the software section using the ID, tag name, and descendant selectors
 */
-/* ----- */
-{
+/* -----svg are the logos */
+#software svg{
     stroke: var(--dk-gray);
 }
 
@@ -735,8 +740,8 @@ h2.third-h2{
     TO DO:
     select the table in the table styles section using the element/tag name selector
 */
-/* ----- */
-{ 
+/* -----only one table so we can just use tag name table */
+table{ 
     border-collapse: collapse;
     width: 100%;
 }
@@ -747,7 +752,7 @@ h2.third-h2{
     select the caption in the table styles section using the element/tag name selector
 */
 /* ----- */
-{ 
+caption{ 
     font-weight: bold;
     font-size: 1.25rem;
     margin-bottom: 8px;
@@ -759,7 +764,7 @@ h2.third-h2{
     select the table header cells in the table styles section using the element/tag name, descendant, and ID selectors
 */
 /* ----- */
-{ 
+#table th{ 
     background-color: var(--blue);
     color: var(--white);
 }
@@ -770,7 +775,7 @@ h2.third-h2{
     select the odd table rows in the table body of the table styles section using the element/tag name and the pseudo-class selectors
 */
 /* ----- */
-{ 
+tbody tr:nth-of-type(odd){ 
     background-color: var(--dv-orange);
 }
 
@@ -780,7 +785,7 @@ h2.third-h2{
     select the first column in the table body of the table styles section using the element/tag name and the pseudo-class selectors
 */
 /* ----- */
-{ 
+tbody td:first-child{ 
     font-weight: bold;
 }
 
@@ -789,8 +794,8 @@ h2.third-h2{
     TO DO:
     select the table heading cells (th) and the table data cells in the table styles section using the element/tag name and multiple element selectors
 */
-/* ----- */
-{ 
+/* ----- comma means look for both but space means look for this inside this*/
+th, td{ 
     border: 1px solid var(--dk-gray);
     padding: 4px;
 }
@@ -801,7 +806,7 @@ h2.third-h2{
     select the table footer in the table styles section using the element/tag name selector
 */
 /* ----- */
-{ 
+tfoot{ 
     font-weight: bold;
 }
 
@@ -813,8 +818,8 @@ h2.third-h2{
     TO DO:
     select all of the divs in the border styling section using the ID, descendant, and tag name selectors
 */
-/* ----- */
-{
+/* ----- targets all divs inside section with border id*/
+#borders div{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -825,8 +830,8 @@ h2.third-h2{
     TO DO:
     select the first div in the border styling section using the ID, tag name and direct descendant selectors
   */
-  /* ----- */
-{
+  /* ----- means first div outermost decendent */
+#borders > div{
     width: 300px;
     height: 300px;
     margin: 16px auto;
@@ -838,8 +843,8 @@ h2.third-h2{
     TO DO:
     select the second div in the border styling section using the ID, descendant, and tag name selectors
 */
-/* ----- */
-{
+/* ----- style divs inside of div*/
+#borders div div{
     width: 250px;
     height: 250px;
     border: 6px dotted var(--dv-orange);
@@ -851,7 +856,7 @@ h2.third-h2{
     select the third div in the border styling section using the ID, descendant, and class name selectors
 */
 /* ----- */
-{
+#borders .dashed{
     width: 200px;
     height: 200px;
     border: 6px dashed var(--dv-yellow);
@@ -863,7 +868,7 @@ h2.third-h2{
     select the fourth div in the pseudo-class styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-{
+#borders .dashed > div{
     width: 150px;
     height: 150px;
     border: 6px double var(--dv-mint);
@@ -875,7 +880,7 @@ h2.third-h2{
     select the last div in the more styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-{
+#borders .dashed div div{
     width: 100px;
     height: 100px;
     border: 6px inset var(--dv-lt-blue);
@@ -890,7 +895,7 @@ h2.third-h2{
     select the pseudo-elements section using the ID selector
 */
 /* ----- */
-{
+#pseudo-els{
     position: relative;
 }
 
@@ -900,7 +905,7 @@ h2.third-h2{
     select the div in the pseudo-elements section using the ID, child/descendant, and tag name selectors
 */
 /* ----- */
-{
+#pseudo-els div{
     width: 275px;
     height: 275px;
     margin: 56px auto 32px;
@@ -915,7 +920,7 @@ h2.third-h2{
     select the div's before element in the pseudo-elements section using the ID, child/descendant, pseudo-element, and tag name selectors
 */
 /* ----- */
-{
+#pseudo-els div::before{
     content: "\2730";
     padding: 12px 24px;
     border-radius: 50%;
@@ -935,7 +940,7 @@ h2.third-h2{
     select the image in the pseudo-elements section using the ID, child/descendant, and tag name selectors
 */
 /* ----- */
-{
+#pseudo-els img{
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -953,7 +958,7 @@ h2.third-h2{
     select the footer element by tag name
 */
 /* ----- */
-{
+footer{
     margin: 2rem auto 0 auto;
     text-align: center;
 }
